# PharmaCIScraperEngine

./: .env.example  .gitignore  ACCEPTANCE_CHECKLIST.md  COMMANDS_TESTED.md  HANDOFF_CONTRACT.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  STEP3_VERIFICATION.md  STEP4_VERIFICATION.md  demo.py  demo_run_batch.py  pyproject.toml  requirements.txt  test_commands.ps1  test_request.json
.claude/: settings.local.json
goal_aware_change_detector/: GOAL_CUSTOMIZATION_GUIDE.md  README.md  VISUAL_CHANGE_DETECTION_README.md
goal_text_change_test/: bedrock_prompt.py  compare_texts.py
html_extractor/: QA_REPORT_PFIZER_ARTICLE.md  README.md  VERIFICATION.md  analyze_depth_potential.py  demo_depth_extraction.py  pfizer_extraction_results.json  pfizer_ponsegromab_article.html  pyproject.toml  requirements.txt  test_pfizer_article.py
html_extractor/src/: __init__.py
html_extractor/src/api/: main.py  routes_extract.py
html_extractor/src/change_analysis/: __init__.py  html_extractor.py
html_extractor/tests/unit/: test_html_extractor.py
src/api/: __init__.py  main.py  routes_change.py
src/change_analysis/: __init__.py  importance.py  llm_adapter.py  pipeline.py  schemas.py  utils_dom.py  utils_image.py
tests/unit/: test_change_analysis.py  test_pipeline_full.py  test_utils_image_importance.py
